--- a/client/src/app/components/calendar/calendar.component.html
+++ b/client/src/app/components/calendar/calendar.component.html
@@ -17,7 +17,7 @@
   <tr class="week" *ngFor="let i of [0,1,2,3,4,5]">
     <td class="day" *ngFor="let j of [0,1,2,3,4,5,6]" [ngClass]="days[7*i+j].cur ? 'cur' : 'not-cur'" (click)="dateSelected(days[7*i+j],7*i+j)">
       {{days[7*i+j].day}}
-      <div *ngIf="days[7*i+j].events" class="event-num">{{days[7*i+j].events.length}}</div>
+      <div *ngIf="days[7*i+j].events" [ngClass]="eventClass(days[7*i+j])">{{days[7*i+j].events.length}}</div>
     </td>
   </tr>
 </table>
