--- a/client/src/app/components/calendar/calendar.component.css
+++ b/client/src/app/components/calendar/calendar.component.css
@@ -25,3 +25,11 @@ td{
     text-align: center;
     border-radius: 10px;
 }
+
+.no-roster{
+    color:white;
+    background: red;
+    text-align: center;
+    border-radius: 10px;
+}
+
