--- a/client/src/app/components/campers/campers.component.html
+++ b/client/src/app/components/campers/campers.component.html
@@ -11,7 +11,14 @@
     
     <!-- Login Form -->
     <form [formGroup]="form" (submit)="onRegistrationSubmit()">
-    
+      
+        <div class="form-group">
+          <label for="pID">personID</label>
+          <div>
+            <input class="form-control" type="text" name="pID" formControlName="pID" />
+          </div>
+        </div>
+
       <div class="form-group">
         <label for="first">First Name</label>
         <div>
