--- a/client/src/app/components/game-calendar/game-calendar.component.html
+++ b/client/src/app/components/game-calendar/game-calendar.component.html
@@ -1,4 +1,14 @@
 <app-loading *ngIf="loading"></app-loading>
+
+<div *ngIf = "authService.admin() || authService.userType()=='head_specialist'">
+  <h3>Filter by division:</h3>
+  <select class="form-control" (change) = "filterGender($event.target.value)">
+    <option value="all">All</option>
+    <option value="male">Boys</option>
+    <option value="female">Girls</option>
+  </select>
+  <app-divisions-dropdown (selectedChanged) = "filterDivision($event)" [gender] = "male" [divisions]="dropdownDivisionsShowing" *ngIf="dropdownDivisions && genderShowing!='all'"></app-divisions-dropdown>
+</div>
 <app-calendar (selection)="dateSelected($event)" (changeVisible)="getGames($event)" [events] = "games"></app-calendar>
 <div *ngIf="selectedDate">
   <h2>{{selectedDate.day}} {{getMonthName(selectedDate.date.month)}} {{selectedDate.date.day}}, {{selectedDate.date.year}}</h2>
@@ -36,16 +46,24 @@
         </div>
       </div>
 
+      <select class="form-control" (change) = "schedGenderChange($event.target.value)">
+          <option value="male">Boys</option>
+          <option value="female">Girls</option>
+      </select>
+      <app-divisions-dropdown (selectedChanged) = "schedDivisionChange($event)" [gender] = "male" [divisions]="schedDivisions" *ngIf="dropdownDivisions"></app-divisions-dropdown>
+
       <input class="btn btn-primary" type="submit" value="Schedule" />
     </form>
   </div>
   <div *ngIf="selectedDate?.date.events">
     <div *ngFor="let game of selectedDate.date.events">
-      <h2>{{displayTime(game.date)}} ({{game.specialty.name}})</h2>
+      <h2>{{displayTime(game.date)}} ({{game.specialty.name}})<span *ngIf="!game.rosterId" class="no-roster">No Roster Submitted!</span></h2>
+      <h3 *ngIf="game.division">{{game.division.name}}</h3>
       <h3>{{game.name}}</h3>
       <p>vs. {{game.opponent}}</p>
       <p>@ {{game.location}}</p>
       <a class="btn btn-primary" [routerLink]="['/game', game._id]">View Game</a>
+      <button class="btn btn-primary" (click)="removeGame(game)" *ngIf="authService.admin()">Remove Game</button>
     </div>
   </div>
 </div>
