--- a/client/src/app/components/game/game.component.html
+++ b/client/src/app/components/game/game.component.html
@@ -1,4 +1,5 @@
 <app-loading *ngIf="loading"></app-loading>
+<app-back-button></app-back-button>
 <div *ngIf="game">
   <h2>{{game.name}}</h2>
   <h3>{{displayDateTime(game.date)}}</h3>
