--- a/client/src/app/components/calendar/calendar.component.html
+++ b/client/src/app/components/calendar/calendar.component.html
@@ -1,3 +1,10 @@
+<div>
+  <h2>Debug</h2>
+    <p>{{fd}}</p>
+    <p *ngFor="let day of days">{{day.month}}</p>
+  <h2>End Debug</h2>
+</div>
+
 <h2>{{this.visibleMonth.year}}</h2>
 <h3>{{getMonthName(this.visibleMonth.month)}}</h3>
 
