--- a/client/src/app/components/calendar/calendar.component.html
+++ b/client/src/app/components/calendar/calendar.component.html
@@ -1,7 +1,7 @@
 <div>
   <h2>Debug</h2>
-    <p>{{fd}}</p>
-    <p *ngFor="let day of days">{{day.month}}</p>
+    <p>{{fDate}}</p>
+    <!-- <p *ngFor="let day of days">{{day.month}}</p> -->
   <h2>End Debug</h2>
 </div>
 
