--- a/client/src/app/components/campers/campers.component.html
+++ b/client/src/app/components/campers/campers.component.html
@@ -91,11 +91,18 @@
                     </ul>
             </div>
             <div class="panel-body">
+                <select class="form-control" (change) = "filterGender($event.target.value)">
+                    <option value="all">All</option>
+                    <option value="male">Boys</option>
+                    <option value="female">Girls</option>
+                  </select>
+                  <app-divisions-dropdown (selectedChanged) = "filterDivision($event)" [gender] = "male" [divisions]="divGenders('male')" *ngIf="dropdownDivisions"></app-divisions-dropdown>
                 <div class="tab-content">
                     <div *ngFor="let session of sessions; let i = index" [ngClass] = "{'in active':i==0}" class="tab-pane fade" id="{{session._id.session_name}}">
                         <h2>{{session._id.session_name}}</h2>
                         <table class="table" >
                             <tr>
+                              <th></th>
                               <th>First</th>
                               <th>Last</th>
                               <th>Gender</th>
@@ -104,7 +111,8 @@
                               <th *ngIf="i!=0"><button class="btn btn-primary" (click) = "massReenroll()">Reenroll Selected</button></th>
                               <th *ngIf="i==0"></th>
                             </tr>
-                            <tr *ngFor="let camper of session.campers">
+                            <tr *ngFor="let camper of session.campers let j = index">
+                              <td>{{j+1}}</td>
                               <td>{{camper.first}}</td>
                               <td>{{camper.last}}</td>
                               <td>{{camper.gender}}</td>
