--- a/client/src/app/components/swim-group/swim-group.component.css
+++ b/client/src/app/components/swim-group/swim-group.component.css
@@ -21,6 +21,7 @@
     position: absolute;
     top: 217px;
     left: 400px;
+    width:500px;
 }
 
 #group-1{
@@ -128,6 +129,7 @@
     position: absolute;
     top: 213px;
     left: 398px;
+    width:500px;
 }
 
 #group-2{
@@ -244,6 +246,7 @@
     position: absolute;
     top: 180px;
     left: 400px;
+    width:500px;
 }
 
 #group-3{
@@ -381,6 +384,7 @@
     position: absolute;
     top: 233px;
     left: 400px;
+    width:500px;
 }
 
 #group-4{
@@ -498,6 +502,7 @@
     position: absolute;
     top: 244px;
     left: 400px;
+    width:500px;
 }
 
 #group-5{
